--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/ver-detalle/ver-detalle.component.html
@@ -30,30 +30,41 @@
               <mat-card-content>
                   <p>
                     <b>Nombre del contratista:</b>
-                    {{ contrato.contratacion.contratista.nombre }}
+                    <i> {{ contrato.contratacion.contratista.nombre }} </i>
                   </p>
                   <p>
                     <b>Número de identificación (NIT/RUT):</b>
-                    {{ contrato.contratacion.contratista.numeroIdentificacion }}
+                    <i> {{ contrato.contratacion.contratista.numeroIdentificacion }} </i>
                   </p>
                   <p>
                     <b>Tipo de intervención:</b>
-                    {{ contratoProyecto.proyecto.tipoIntervencionCodigo }}
+                    <i> {{ contratoProyecto.proyecto.tipoIntervencionCodigo }} </i>
                   </p>
                   <p>
                     <b>Departamento:</b>
-                    {{ contratoProyecto.proyecto.departamento }}
+                    <i> {{ contratoProyecto.proyecto.departamento }} </i>
                   </p>
                   <p>
                     <b>Municipio:</b>
-                    {{ contratoProyecto.proyecto.municipio }}
+                    <i> {{ contratoProyecto.proyecto.municipio }} </i>
                   </p>
                   <p>
                     <b>Valor total del proyecto:</b>
-                    {{ contratoProyecto.proyecto.valorTotal | currency:'COP':'symbol-narrow':'.0-0' }}
+                    <i> {{ contratoProyecto.proyecto.valorTotal | currency:'COP':'symbol-narrow':'.0-0' }} </i>
                   </p>
               </mat-card-content>
           </mat-card>
+
+          <div class="d-flex justify-content-center">
+            <b style="margin-right: .3em;">¿En qué estado de la fase 1 - Preconstrucción se encuentra el proyecto?:</b>
+            <p *ngIf="contratoProyecto.proyecto[ 'tieneEstadoFase1EyD' ] === true"> <i> Estudios y diseños </i> </p>
+            <span *ngIf="contratoProyecto.proyecto[ 'tieneEstadoFase1Diagnostico' ] === true">,</span>
+            <span *ngIf="contratoProyecto.proyecto[ 'tieneEstadoFase1Diagnostico' ] === false">.</span>
+            <p *ngIf="contratoProyecto.proyecto[ 'tieneEstadoFase1Diagnostico' ] === true" style="margin-left: .3em;"> <i> diagnóstico </i> </p>
+            <span *ngIf="contratoProyecto.proyecto[ 'tieneEstadoFase1Diagnostico' ] === true">.</span>
+          </div>
+          
+          <p *ngIf="esInterventoria === true" class="d-flex justify-content-center" style="margin-bottom: 1em;"><b style="margin-right: .3em;"> ¿Cuántos perfiles diferentes se requieren del interventor para ejecutar el proyecto?: </b> <i> {{ contratoProyecto.proyecto.contratoPerfil.length }} </i> </p>
 
           <mat-accordion *ngFor="let perfil of contratoProyecto.proyecto.contratoPerfil; index as i">
               <mat-expansion-panel class="expansion-style sub-expansion">
@@ -67,7 +78,7 @@
                       <mat-card-content>
                           <p>
                             <b>Perfil:</b>
-                            {{ tipoPerfil( perfil.perfilCodigo ) }}
+                            <i> {{ tipoPerfil( perfil.perfilCodigo ) }} </i>
                           </p>
                           <p>
                             <b>Cantidad de hojas de vida requeridas:</b>
@@ -96,7 +107,7 @@
                           </p>
                           <p>
                             <b>URL con soporte:</b>
-                            {{ perfil.rutaSoporte }}
+                            <i> {{ perfil.rutaSoporte }} </i>
                           </p>
                       </mat-card-content>
                   </mat-card>
