--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/expansion-verificar-requisitos/expansion-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/expansion-verificar-requisitos/expansion-verificar-requisitos.component.html
@@ -34,27 +34,27 @@
         <mat-card-content>
           <p>
             <b>Nombre del contratista:</b>
-            {{ contrato.contratacion.contratista.nombre }}
+            <i> {{ contrato.contratacion.contratista.nombre }} </i>
           </p>
           <p>
             <b>Número de identificación (NIT/RUT):</b>
-            {{ contrato.contratacion.contratista.numeroIdentificacion }}
+            <i> {{ contrato.contratacion.contratista.numeroIdentificacion }} </i>
           </p>
           <p>
             <b>Tipo de intervención:</b>
-            {{ contratoProyecto.proyecto.tipoIntervencionCodigo }}
+            <i> {{ contratoProyecto.proyecto.tipoIntervencionCodigo }} </i>
           </p>
           <p>
             <b>Departamento:</b>
-            {{ contratoProyecto.proyecto.departamento }}
+            <i> {{ contratoProyecto.proyecto.departamento }} </i>
           </p>
           <p>
             <b>Municipio:</b>
-            {{ contratoProyecto.proyecto.municipio }}
+            <i> {{ contratoProyecto.proyecto.municipio }} </i>
           </p>
           <p>
             <b>Valor total del proyecto:</b>
-            {{ contratoProyecto.proyecto.valorTotal | currency: 'COP':'symbol-narrow':'.0-0' }}
+            <i> {{ contratoProyecto.proyecto.valorTotal | currency: 'COP':'symbol-narrow':'.0-0' }} </i>
           </p>
         </mat-card-content>
       </mat-card>
@@ -71,7 +71,7 @@
             <mat-card-content>
               <p>
                 <b>Perfil:</b>
-                {{ perfil['nombre'] }}
+                <i> {{ perfil['nombre'] }} </i>
               </p>
               <p>
                 <b>Cantidad de hojas de vida requeridas:</b>
@@ -101,7 +101,7 @@
               </p>
               <p>
                 <b>URL con soporte:</b>
-                {{ perfil.rutaSoporte }}
+                <i> {{ perfil.rutaSoporte }} </i>
               </p>
             </mat-card-content>
           </mat-card>
