--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/tabla-contrato-de-interventoria/tabla-contrato-de-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/tabla-contrato-de-interventoria/tabla-contrato-de-interventoria.component.html
@@ -52,7 +52,7 @@
     <ng-container matColumnDef="gestion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
         <td mat-cell *matCellDef="let element">
-            <a  [routerLink]="['obraVerDetalle', element.contratoId]"
+            <a  [routerLink]="['interventoriaVerDetalle', element.contratoId]"
                 mat-raised-button color="accent"
                 class="btn-table"
                 *ngIf=" estadosPreconstruccionInterventoria !== undefined 
