--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/aprobar-incorporacion-rendimientos/aprobar-incorporacion-rendimientos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/aprobar-incorporacion-rendimientos/aprobar-incorporacion-rendimientos.component.html
@@ -21,10 +21,10 @@
         </div>
     </div>
     <div class="table-responsive">
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="fechaCargue"  matSortDirection="desc" class="mat-elevation-z8">
             <ng-container matColumnDef="fechaCargue">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de cargue </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCargue | date: "dd/mm/yyyy" }}</b> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCargue | date: "dd/MM/yyyy" }}</b> </td>
             </ng-container>
             <ng-container matColumnDef="registrosIncorporados">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número total de registros incorporados</th>
@@ -38,7 +38,6 @@
                     >
                         Incorporar rendimientos
                     </button>
-                    {{element|json}}
                      <button mat-raised-button color="accent" class="btn-table" *ngIf="element.registrosIncorporados == 0"
                       (click)="downloadConsistencies(element.registerId)"
                      >
@@ -49,6 +48,7 @@
                         Generar Acta
                     </button>
                     <button mat-raised-button color="accent" class="btn-table" *ngIf="element.registrosIncorporados > 0"
+                        [disabled]="true"
                     (click)="uploadSignedMinutes();">
                         Cargar acta firmada
                     </button>
