--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-pagos-rendimientos/components/dialog-cargar-report-rend-rpr/dialog-cargar-report-rend-rpr.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-pagos-rendimientos/components/dialog-cargar-report-rend-rpr/dialog-cargar-report-rend-rpr.component.scss
@@ -14,3 +14,11 @@
 .textoGris{
     color: var(--fontColor) !important;
 }
+
+.input-file--btn{
+    &:hover {
+        background-color: #d1d1d1;
+        background-color: var(--grayColor);
+        text-decoration: none;
+      }
+}
