--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/gestionar-polizas/gestionar-polizas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/gestionar-polizas/gestionar-polizas.component.html
@@ -6,13 +6,10 @@
   </div>
   <h1 class="title-menu--h1">Gestionar póliza contrato {{ this.numContrato }}</h1>
   <p class="info-sub-title">
-    <span
-      >Fecha de firma del contrato <b>{{ this.fechaFirmaContrato }}</b></span
+    <span> Fecha de firma del contrato <b>{{ this.fechaFirmaContrato }}</b> </span
     >
-    <span
-      ><b>{{ this.tipoSolicitud }}</b></span
-    >
-    <span>Estado: <b>Sin radicación de pólizas</b></span>
+    <span> <b>{{ this.tipoSolicitud }}</b> </span>
+    <span> Estado: <b>Sin radicación de pólizas</b> </span>
   </p>
 </section>
 <section class="container">
