--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -594,9 +594,7 @@
           <b style="margin-top: 0.8em">
             {{ perfil.get('fechaObservacion').value | date: 'dd/MM/yyyy' }}
           </b>
-          <p>
-            {{ textoLimpioMessage(perfil.get('observacionSupervisor').value) }}
-          </p>
+          <section [innerHTML]="perfil.get('observacionSupervisor').value" style="margin-left: 2em"></section>
         </mat-card-content>
       </mat-card>
 
