Fase-2-Paquete-5 Fix Wp 20210409 21 Accounst duplicated

--- a/asivamosffie.services/Templates/PDF/PerformanceMinute.liquid
+++ b/asivamosffie.services/Templates/PDF/PerformanceMinute.liquid
@@ -569,7 +569,7 @@
             padding: 0cm;
           "
         >
-          Anexos: Estado de recursos previo y posterior a la incorporaciÃ³n
+          Anexos: Estado de recursos previo y posterior a la incorporación
         </p>
       </div>
 
